--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,7 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.2.0-alpha07'
     implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha07'
 
+    implementation 'com.google.code.gson:gson:2.8.5'
+
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 }
